[package]
name = "legion"
version = "0.1.0"
authors = ["YoEight <yo.eight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.17.0"
structopt = "0.3"
eventstore = "0.9.8"
tokio = { version = "0.2.23", features = ["rt-threaded", "macros", "fs"] }
termion = "1.5.5"
serde_json = "1"
futures = "0.3"
rlua_serde = "0.4"
serde = "1"
base64 = "0.13"
reqwest = { version = "0.10.9", default_features = false, features = ["rustls-tls", "json"] }
bytes = "0.5"
pretty_env_logger = "0.4.0"
