[package]
name = "legion"
version = "0.1.0"
authors = ["YoEight <yo.eight@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.17.0"
structopt = "0.3"
eventstore = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
glyph = { git = "https://github.com/YoEight/glyph.git" }
serde_json = "1"
futures = "0.3"
rlua_serde = "0.4"
serde = "1"
base64 = "0.13"
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls", "json"] }
bytes = "1"
pretty_env_logger = "0.4.0"
clap =  { version = "3", features = ["cargo"] }
sqlparser = "0.8"
async-stream = "0.3"
nom = "6"
log = "0.4"
